--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Demo.PL.ViewModels.Employee
 @using Demo.DAL.Models
 @using Cemo.BLL.Services.Interfaces
+@using Demo.PL.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
  
